--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - checkout
       - run: sudo apt-get install -y libpq-dev
-      - run: sudo docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && docker-ext-install pdo pdo_pgsql
+      - run: sudo docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && docker-php-ext-install pdo pdo_pgsql
       - run: sudo docker-php-ext-install zip
 
       # Download and cache dependencies
