--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
 
     steps:
       - checkout
-      - run: sudo apt-get install -y libpq-dev
+      - run: sudo apt-get install -y libpq-dev zlib1g-dev
       - run: sudo docker-php-ext-configure pgsql -with-pgsql=/usr/local/pgsql && sudo docker-php-ext-install pdo pdo_pgsql
       - run: sudo docker-php-ext-install zip
 
