--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,9 @@ jobs:
       # specify the version you desire here
       - image: circleci/php:7.2.3-apache-node-browsers
       - image: circleci/postgres:9.6-alpine-ram
+        environment:
+          POSTGRES_USER: root
+          POSTGRES_DB: circle-test_test
       - image: circleci/node:9.10-browsers
 
       # Specify service dependencies here if necessary
